--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="home">Home</string>
     <string name="stats">Statistics</string>
     <string name="accounts">Accounts</string>
+    <string name="default_account_name">Banca dei Panni</string>
 </resources>
